--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
@@ -1,3 +1,18 @@
+---
+title: "Statistics with R"
+subtitle: "Modelling Data with R"
+author: "Dragonfly Stats"
+date: "2016/12/12"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
+
 Q. 4)
 
 The CDC and EISS detect influenza activity through clinical data including Influenza-like
