--- a/00-C1/02-Part2.Rmd
+++ b/00-C1/02-Part2.Rmd
@@ -17,12 +17,12 @@ return of the principal investment after 1, 5, 10, 15, 20 and 30 years respectiv
 
 
 
- ```{r}
-interest_rates <- read.csv("Interest_rates.csv")
+```{r}
+interest_rates <- read.csv("Data/Interest_rates.csv")
 ``` 
 
 
-
+---
 
 
 Calculate the Pearson correlation coefficient matrix for this data.
@@ -31,7 +31,7 @@ Exercise 1
 
 
 
- ```{r}
+```{r}
 
 # read the data
 > interest_rates<-read.csv("Interest_rates.csv")
@@ -39,74 +39,30 @@ Exercise 1
 
 ``` 
 
+---
 
- ```{r}
+```{r}
  C <- cor(interest_rates, method="pearson")
 ``` 
 
+---
+
 Alternative solution
+
+```{r}
 cor(interest_rates)
-> C
-X1.year
-X5.year
-X10.year
-X15.year
-X20.year
-X30.year
-X1.year
-1.0000000
-0.8760513
-0.7827029
-0.7380130
-0.6146684
-0.4094968
-X5.year
-0.8760513
-1.0000000
-0.9666006
-0.9356486
-0.8269608
-0.6020591
-X10.year
-0.7827029
-0.9666006
-1.0000000
-0.9907851
-0.9339235
-0.7657966
-X15.year
-0.7380130
-0.9356486
-0.9907851
-1.0000000
-0.9696405
-0.8315513
-X20.year
-0.6146684
-0.8269608
-0.9339235
-0.9696405
-1.0000000
-0.9379375
-X30.year
-0.4094968
-0.6020591
-0.7657966
-0.8315513
-0.9379375
-1.0000000
-
-
-``` 
+```
 
 
 
 The correlation matrix shows that there is strong (positive) correlation between returns on bonds of similar maturity.
 
 It also shows that the correlation between returns is weaker as the length of maturity between bonds increases.
-============================
 
-Part 2}
+---
+
+Part 2
+============================
 Perform a reduction of the dimension of the data using principal component analysis with the method of singular value decomposition.
 
 Your answer should include a summary of the principal component analysis.
@@ -125,28 +81,10 @@ pca <- prcomp(interest_rates)
 
 
 
- ```{r}
-
-
-
+```{r}
 # review the results of the principal component analysis
-> summary(pca)
+summary(pca)
 
-Importance of components:
-PC1
-PC2
-PC3
-PC4
-PC5
-Standard deviation
-0.00945 0.003419 0.001488 0.0002555 0.0002061
-Proportion of Variance 0.86432 0.113130 0.021430 0.0006300 0.0004100
-Cumulative Proportion 0.86432 0.977440 0.998880 0.9995100 0.9999200
-PC6
-Standard deviation
-8.986e-05
-Proportion of Variance 8.000e-05
-Cumulative Proportion 1.000e+00
 ```
 
 
@@ -155,27 +93,8 @@ Cumulative Proportion 1.000e+00
 
 
 ```{r}
-
-> pca<-princomp(interest_rates)
-> summary(pca)
-Importance of components:
-Comp.1
-S 2019
-Comp.2
-Comp.3
-Comp.4
-
-
-Standard deviation
-0.009317648 0.003370953 0.001467303 0.0002519268
-Proportion of Variance 0.864317887 0.113127014 0.021433880 0.0006318435
-Cumulative Proportion 0.864317887 0.977444901 0.998878781 0.9995106243
-Comp.5
-Comp.6
-Standard deviation
-0.0002032373 8.860665e-05
-Proportion of Variance 0.0004112140 7.816163e-05
-Cumulative Proportion 0.9999218384 1.000000e+00
+pca<-princomp(interest_rates)
+summary(pca)
 
 
 ``` 
@@ -187,7 +106,7 @@ components is c.98\%, and by the first three components c.99%.
 Therefore it would be reasonable to reduce the dimensions of the dataset by using the
 first two (or three) principal components.
 
-=========================================================%%
+---
 
 Candidates performed generally well in this question. Part (i) was very well answered,
 with some partial answers in (i)(b) where many candidates observed a relationship in
