--- a/00-E1-CS1B-FIA-September-2020/04-Exercise4.Rmd
+++ b/00-E1-CS1B-FIA-September-2020/04-Exercise4.Rmd
@@ -1,30 +1,3 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
 
 \large 
 \noindent
@@ -35,6 +8,9 @@ and contain the following information:
 country: the country concerned;
 alcohol: alcohol consumption per adult per year (litres/year);
 cigarettes: number of cigarettes consumed per adult per year.
+
+---
+
 (i) (a) Construct a scatterplot of the data with alcohol consumption on the
 x axis.
 (b) Comment on the relationship between the data on alcohol and cigarette
@@ -54,26 +30,41 @@ alcohol and cigarette consumption.
 [6]
 (v) Perform a hypothesis test for the null hypothesis that Pearson’s population
 correlation coefficient is equal to zero, against the alternative that it is positive.
-You should report the p-value of the test and a clear conclusion. [5]
+You should report the p-value of the test and a clear conclusion. 
+
+---
+
 A media bulletin has reported that ‘'‘h‘igher alcohol consumption causes higher
 cigarette consumption .
 (vi) Comment on whether this report is justified based on your analysis in parts (iv)
 and (v). [2]
-‘
-’
+
+---
+
 alcohol.2 = alcohol[-c(6,16)]
 cigarettes.2 = cigarettes[-c(6,16)]
-CS1B S2020–5
+
+
+---
+
 (vii) Perform a simple linear regression analysis on the new data using a
 model of the form y = α + βx + ε (cigarette consumption, y, on alcohol
 consumption, x), where the error terms ε independently follow a
 N(0, s2) distribution.
 Your answer should show the fitted line plotted on the data scatterplot
 and report the estimate of parameter s. [5]
+
+
+---
+
 (viii) State the proportion of the total variability of the responses explained
 by the model, based on your output in part (vii). [1]
 (ix) Plot a graph of the residuals of the model fitted in part (vii)
-against the explanatory variable. [2]
+against the explanatory variable. 
+
+
+---
+
 (x) Comment on the validity of the model, based on your output in
 part (ix) . [3]
 [Total 34]
