--- a/00-D2/06-Exercise6.Rmd
+++ b/00-D2/06-Exercise6.Rmd
@@ -1,3 +1,21 @@
+---
+title: "Statistics with R"
+subtitle: "Modelling Data with R"
+date: "2016/12/12"
+output:
+  xaringan::moon_reader:
+    lib_dir: libs
+    nature:
+      highlightStyle: github
+      countIncrementalSlides: false
+---
+
+
+```{r}
+library(magrittr)
+
+options(repr.plot.width=8, repr.plot.height=5)
+```
 
 Suppose the transition probabilities are a function of the age of a person. The transition
 probability of a person aged x moving:
@@ -13,7 +31,7 @@ Assuming 100 is the maximum age. Calculate the probability of:
 
 2.  Sick person aged 25 will be in Death state after 7 years.
 
-
+---
 
 
 ```{r}
@@ -27,6 +45,8 @@ S2D<-function(x){ 0.002*(100-x)}
 
 ```
 
+
+---
 
 ```{r}
 
@@ -49,14 +69,14 @@ transmat<-function(x){
 
 
 ```{r}
-M
+transmat()
 ```
 
 
     Error in eval(expr, envir, enclos): object 'M' not found
     Traceback:
 
-
+---
 
 
 ```{r}
@@ -73,25 +93,25 @@ B
     Traceback:
 
 
-
+---
 
 ```{r}
 
-
-> B
-[,1]
-[,2]
-[,3]
-[1,] 0.5451076 0.2608138 0.1940787
+B
+```
 Hence the probability of Healthy person aged 30 will be in Sick state after 4 years is 0.2608138.
 
 [9]
-2. 
+2.
+
+```{r}
 n=25
 C<-c(0,1,0)
 for (i in 1:7){
 C=C%*%transmat(n+i-1)}
 C
+```
+
 > C
 [,1]
 [,2]
@@ -99,4 +119,4 @@ C
 [1,] 0.3946025 0.1720589 0.4333386
 Hence the probability of sick person aged 25 will be in Death state after 7 years is 0.4333386.
 
-```
+---
